<resources>
    <string name="app_name">iCare</string>

    <string name="onboarding_slide1_title">Create an account</string>
    <string name="onboarding_slide1_subtitle">Connect with doctor\'s around you</string>
    <string name="onboarding_slide1_desc">User will be able to give you live, chat and meet
        with people nearby.</string>
    <string name="onboarding_slide2_title">Login to your account</string>
    <string name="onboarding_slide2_subtitle">Let\'s build connection with new people</string>
    <string name="onboarding_slide2_desc">Connect helps you locate the people around you who
        are closest from your home.</string>
    <string name="onboarding_slide3_title">Login to your account</string>
    <string name="onboarding_slide3_subtitle">Feel the happiness</string>
    <string name="onboarding_slide3_desc">User will be able to give you live, chat and meet
        with people nearby.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get started</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <string name="new_user">New User?</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="home_screen_title">Home</string>
    <string name="home_screen_text">Can\'t walk? then fly!</string>
    <string name="email">email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>

    <string-array name="specility">
        <item>Allergic</item>
        <item>Dermatologists</item>
        <item>Endocrinologists</item>
        <item>Gastroenterologists</item>
        <item>Geriatric Medicine </item>
        <item>Hematologists</item>
        <item>Hospice and Palliative Medicine</item>
        <item>Emergency Medicine </item>
        <item>Family Physicians</item>
        <item>Anesthesiologists</item>
        <item>Cardiologists</item>
        <item>Colon and Rectal Surgeons</item>
        <item>Critical Care Medicine</item>
        <item>Infectious Disease Specialists</item>
        <item>Internists</item>
        <item>Radiologists</item>
        <item>Rheumatologists</item>
        <item>General Surgeons</item>
        <item>Urologists</item>
        <item>Neurologists</item>
        <item>Oncologists</item>
        <item>Ophthalmologists</item>
        <item>Osteopaths</item>
        <item>Otolaryngologists</item>
        <item>Pathologists</item>
        <item>Pediatricians</item>
        <item>Physiatrists</item>
        <item>Plastic Surgeons</item>
        <item>Psychiatrists</item>
        <item>Obstetricians and Gynecologists</item>
        <item>Medical Geneticists</item>
        <item>Others</item>
    </string-array>

    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever...</string>
    <string name="strNewMessage">New Message</string>

</resources>