<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

        <include
            layout="@layout/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgLogo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_banner"
            android:layout_marginTop="120dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/txtConfirmPass">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/usernameEt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="240dp"
                    android:background="@drawable/background_edittext"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/profileFirstName"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="Email"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/background_edittext"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/usernameEt"
                    app:layout_constraintStart_toStartOf="@+id/usernameEt"
                    app:layout_constraintTop_toBottomOf="@+id/usernameEt">

                    <EditText
                        android:id="@+id/profileLastName"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="Password"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/rememberMeBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/remember_me"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/forgotPasswordTv"
                    app:layout_constraintStart_toStartOf="@+id/passwordEt"
                    app:layout_constraintTop_toBottomOf="@+id/passwordEt" />

                <TextView
                    android:id="@+id/forgotPasswordTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/rememberMeBtn"
                    app:layout_constraintEnd_toEndOf="@+id/passwordEt"
                    app:layout_constraintStart_toEndOf="@+id/rememberMeBtn" />

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/button_possitive"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/forgotPasswordTv"
                    app:layout_constraintStart_toStartOf="@+id/rememberMeBtn"
                    app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTv" />

                <TextView
                    android:id="@+id/signUpTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/new_user"
                    android:textColor="@color/colorDarkGreen"
                    app:layout_constraintEnd_toEndOf="@+id/loginBtn"
                    app:layout_constraintStart_toStartOf="@+id/loginBtn"
                    app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signUpTv" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>